Added conan building with cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,5 @@ include_directories(include)
 add_executable(${projectName} ${SRCS})
 
 add_compile_options( -Wall -Wextra -Wpedantic -Werror)
+
+add_subdirectory(test)
