Added test that uses PNGFile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,15 @@
 cmake_minimum_required(VERSION 3.28)
 
-set(projectName pngReader)
+set(projectName pngio)
 
-project( ${projectName} )
+project(${projectName})
 
 file(GLOB SRCS src/*.cpp)
 
 include_directories(include)
 
-add_executable(${projectName} ${SRCS})
+add_library(${projectName} ${SRCS})
 
-add_compile_options( -Wall -Wextra -Wpedantic -Werror)
+add_compile_options(-Wall -Wextra -Wpedantic -Werror)
 
 add_subdirectory(test)
