--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,4 +7,4 @@ file(GLOB SRCS *.cpp)
 
 add_executable(${projectName} ${SRCS})
 
-target_link_libraries(${projectName} gtest::gtest)
+target_link_libraries(${projectName} gtest::gtest pngio)
