--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
 
       # Install Conan dependencies
       - name: Conan Install
-        run: conan install . -if=build
+        run: conan install . -if build
 
       # Run the Conan build command
       - name: Conan Build
-        run: conan build -of=build .
+        run: conan build -of build .
